Creat and style hero

--- a/index.html
+++ b/index.html
@@ -17,5 +17,19 @@
             </div>
         </div>
     </div>
+    <section class="hero">
+        <div class="hero-content">
+            <div class="hero-heading">
+            <h1 class="hero-title">Welcome to the Odin Project Landing Page</h1>
+            <p class="hero-subtitle">This is a simple landing page created as part of the Odin Project curriculum.</p>
+            <button class="signup">Sign Up Now!</button>
+            </div>
+        
+            <div class="hero-image">
+            <img src="https://cdn.brandfetch.io/idqq2v1naO/theme/dark/logo.svg?c=1bxid64Mup7aczewSAYMX&t=1750422911467" alt="Odin Project Logo">
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
