Add features section with technology icons and styles

--- a/index.html
+++ b/index.html
@@ -31,5 +31,30 @@
 
         </div>
     </section>
+
+    <section class="features">
+        <h2 class="feature-title">Full Stack JavaScript</h2>
+        <div class="feature-list">
+            <div class="feature">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" class="feature-icon">
+                <p>HTML</p>
+            </div>
+
+            <div class="feature">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/1024px-CSS3_logo.svg.png?20210705212817" class="feature-icon">
+                <p>CSS</p>
+            </div>
+
+            <div class="feature">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png?20120221235433" class="feature-icon">
+                <p>JavaScript</p>
+            </div>
+
+            <div class="feature">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1024px-React-icon.svg.png?20220125121207" class="feature-icon">
+                <p>React</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
