Add testimonials section with styling and content

--- a/index.html
+++ b/index.html
@@ -56,5 +56,22 @@
             </div>
         </div>
     </section>
+
+    <section class="testimonials">
+        <div class="testimonials-content">
+            <h2 class="testimonials-title">What Our Students Say</h2>
+            <div class="testimonials-list">
+                <div class="testimonial">
+                <q>The Odin Project has changed my life!</q>
+                <p>- Me!</p>
+                </div>
+
+                <div class="testimonial">
+                    <q>I never thought I could learn to code.</q>
+                    <p>- Also Me!</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
