Add call-to-action section with styling and content

--- a/index.html
+++ b/index.html
@@ -73,5 +73,15 @@
             </div>
         </div>
     </section>
+
+    <section class="cta">
+        <div class="cta-content">
+            <div class="cta-text">
+                <h2 class="cta-title">Ready to Join Us?</h2>
+                <p class="cta-subtitle">Sign up now and start your journey with the Odin Project!</p>
+            </div>
+            <button class="cta-button">Get Started</button>
+        </div>
+    </section>
 </body>
 </html>
