Add footer section with styling

--- a/index.html
+++ b/index.html
@@ -83,5 +83,9 @@
             <button class="cta-button">Get Started</button>
         </div>
     </section>
+
+    <footer>
+    <p>© 2025, LXG</p>
+  </footer>
 </body>
 </html>
